# Tri-Proof

./: Anchor.toml  package-lock.json  package.json  rust-toolchain
programs/gig-basic-contract/: Cargo.toml
programs/gig-basic-contract/src/: constants.rs  errors.rs  lib.rs
programs/gig-basic-contract/src/instructions/: activate_contract.rs  admin_approve.rs  buyer_approve.rs  mod.rs  seller_approve.rs  start_contract.rs
programs/gig-basic-contract/src/state/: contract.rs  mod.rs
programs/gig-hub-coin-test/: Cargo.toml
programs/gig-hub-coin-test/src/: bindings.rs  error.rs  instruction.rs  lib.rs  multisig.rs  processor.rs  state.rs  utils.rs  wasm.rs
programs/gig-hub-coin-test/src/instructions/: config_transaction_execute.rs
programs/gig-hub-coin-test/src/state/: config_transaction.rs
programs/squads_multisig_program/src/: lib.rs
programs/src/: error.rs  errors.rs
programs/src/instructions/: batch_add_transaction.rs  config_transaction_execute.rs  multisig_create.rs  vault_transaction_create.rs
programs/src/state/: config_transaction.rs  multisig.rs  proposal.rs
tests/: gig-basic-contract.ts  gig-hub-coin-test.ts
