[package]
name = "trisig-program"
version = "1.0.0"
description = "tri sig DAO smart contract"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "trisig_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
testing = []
default = []

[dependencies]
anchor-lang = { version = "=0.29.0", features = ["allow-missing-optionals"] }
anchor-spl = { version="=0.29.0", features=["token"] }
solana-program = "1.17.4"
solana-security-txt = "1.1.1"
#